    methods can't be used with older resolver servers, however older
    clients can still talk to a newer resolver server.
  - Plug a couple of holes that could allow non canonical paths to be
    created
  - Fix a bunch of bugs coming from an incorrect test for path
    parenthood. Including a potential referral loop with a complex
    cluster.
  - Implement From on Value for most primitive types.
  - Add a trait, FromValue, that behaves like FromStr, and implement
    it for many primitive types. Refactor cast_* methods into
    cast_to::<T> where T: FromValue.
  - Tune the resolver server to give much higher priority to Resolve
    over List, Table and especially ListMatching calls.
  - Reorganize the project so rust-analyzer will work on all the sub
    projects.

* 0.5.1:
  - Resolver server: improve the performance of sharding (eliminate
    integer division) for a noticable speedup processing large
    batches.
  - Put an upper bound on total pool size to avoid various extreme
    scenarios causing unbounded memory usage.
  - Pool more buffers in the resolver server to reduce dynamic
    allocation.
  - Fix a bug in the new sharded resolver store that broke default
    publishing.
  - Fix unit tests.

* 0.5.0:
  - Update to tokio 0.3 aka 1.0
  - Implement timeout logic in the resolver client to deal with the
    case where a resolver server is hung. The rule is, minimum timeout
    15 seconds or 6 microseconds per operation in the batch for reads
    and 12 microseconds per operation in the batch for writes,
    whichever timeout is longer.
  - Limit reads and writes to a maximum batch size to prevent doing
    too much work at once on a tokio worker thread, and reader/writer
    starvation, The max batch sizes are are 1000K ops for readers and
    100K ops for writers. Cleaning up dead publishers are included in
    these limits. Results are flushed back to the client after each
    chunk so that we interact properly with the hang detection feature